--- a/Public/Styles/Home.css
+++ b/Public/Styles/Home.css
@@ -13,39 +13,32 @@ header{
 }
 
 header .primero{
-    display: flex;
-    flex-wrap: wrap;
+    display: block;
+
     background: #C5CAE9;
-    justify-content: space-between;
+    justify-content: center;
     border: solid 1px;
     border-color: #BDBDBD;
-}
-
-header div .titulo{
-    display: flex;
-    justify-content: center;
-    font-size: 39px;
-    align-self: flex-start;
-    margin-top: 10px;
+    width: 100%;
 }
 
 .titulo{
+
+    width: 100%;
+    margin: 10px ;
+    text-align: center;
     font-family: 'Tourney', cursive;
     color:#212121;
 }
 
-header .Logo{
-    display: flex;
-    justify-content: space-around;
-   
+.inicio{
+    display: none;
+    text-align: center;
+    margin: 10px;
+    font-size: 20px;
+    height: 40px;
 }
 
-.icono {
-    font-size: 35px;
-    margin: 20px;
-    align-self:auto;
-    text-decoration: none;
-}
 
 header .segundo{
     display: flex;
@@ -59,62 +52,82 @@ header .form{
     padding: 5px;
 }
 
-header .form .input{
+
+/**/
+.form{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+
+.form .la-bara{
     background-color: white;
     border: 1px solid #666;
     color:#666;
     padding: 3px;
-    width: 600px;
+    width: 70%;
     border-radius: 3px;
 }
 
-header .form .submit{
+.form .submitt{
     background-color: #ebebeb;
     border: 1px solid #666;
     color:#000;
     padding: 3px;
     width: 28px;
-    margin-left: 8px;
-    font-weight: bold;
     border-radius: 3px;
 }
+/**/
 
+
+div.burger-menu{
+    text-align: center;
+}
+
+div.burger-menu i{
+    background-color: #3F51B5;
+    border-radius: 5px;
+    color: #FFF;
+    font-size: 20px;
+    height: 40px;
+    margin: 10px 0px 20px 0px;
+    padding: 10px;
+    width: 40px;
+}
+
+
+
+/**/
 .tercero{
-    display: flex;
+    
     background-color: rgb(43, 43, 204);
     background: #3F51B5;  
-    
-    
-   
 }
 
 .tercero .nav-barr{
-    text-align: center;
-    margin: auto;
+    display: none;
+
    
 }
 
-header ul{
-    display: flex;
+.nav-barr ul{
+
     margin: 10px;
     text-align: center;
-}
-
-header ul li{
-    display: flex;
     list-style-type: none;
-    justify-content: space-between;
-    padding: 0px, 20px;
-    
 }
 
-header ul li a{
-    font-size: 25px;
+
+header .nav-barr a{
+    list-style-type: none;
+    font-size: 22px;
     text-decoration:none;
     font-weight: bold;
-    padding-right: 12px;
-    padding-left: 12px;
     color: #FFFFFF; 
+    text-align: center;
+    display: inline-block;
+
 }
 header ul li a:hover{
     background: #757575;
@@ -193,13 +206,137 @@ main{
     display: flex;
     
     justify-content: space-between;
-    text-align: justify;
     font-family: 'Zen Kurenaido', sans-serif;
     text-decoration: none;
     padding: 20px;
     background: #3F51B5
     
 }
+
+.main-footer ul li a{
+    text-decoration: none;
+    color: white;
+}
+.fomulario{
+    padding: 0px 50px;
+    color: white;
+}
+h5{
+    color: white;
+}
+.main-footer ul li {
+    text-decoration: none;
+    color: white;
+    list-style-type:none
+}
+.main-footer ul i{
+    text-decoration: none;
+    color: white;
+}
+
+.logobot
+{
+    background-color: #C5CAE9;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+@media(min-width:361px){
+    header .burger-menu{
+        display: none;
+    }
+
+    .tercero .nav-barr{
+        text-align: center;
+        margin: auto;
+        display: flex;
+        margin: 0 3%;
+
+    }
+
+    header .nav-barr{
+        display: flex;
+        justify-content: center;
+        padding: 0 8px 8px 8px;
+    }
+
+    .nav-barr ul{
+        display: flex;
+    }
+    .nav-barr ul a{
+        margin: 0 5px;
+        display: flex;
+        padding: 0 3px;
+
+    }
+
+    .inicio {
+        display: flex;
+        text-align: center;
+        margin: 10px;
+        font-size: 20px;
+        height: 40px;
+        font-size: 25px;
+    }
+    /*.user-cirlcle, .carrito {
+        font-size: 35px;
+        margin: 5px;
+        align-self:auto;
+        text-decoration: none;
+        
+    }*/
+
+}
+
+
+
+@media(min-width:769px){
+    header .primero{
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .titulo{
+        font-size: 25px;
+        align-items: center;
+    }
+}
+
+
+@media screen and (max-width: 900px) {
+
+    *{
+        padding: 0px;
+    }
+
+    main {
+        padding: 0px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .titulo-compra{
+        display: block;
+    
+    }
+    footer{
+      position: relative;
+      bottom: 0px;
+      text-align: center;
+    }
+    .main-footer{
+      flex-wrap: wrap;
+      flex-direction: column-reverse;
+    }
+    .main-footer ul li {
+      margin: 5px 0;
+    }
+    .titulo{
+        font-size: 20px;
+    }
+}
+
 
 .main-footer ul li a{
     text-decoration: none;
